objects/Dealer_CRM_Disposition__e.object
<CustomObject>
    <fields>
        <fullName>Arrival_Time_DT__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Response_TXT__c</fullName>
        <label>Auto Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_TXT__c</fullName>
        <label>Current Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HELMS_Opportunity_External_Key_TXT__c</fullName>
        <label>HELMS Opportunity External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_Last_Event_TXT__c</fullName>
        <description>Disposition Code</description>
        <label>The Last Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealer CRM Disposition</label>
    <pluralLabel>Dealer CRM Dispositions</pluralLabel>
</CustomObject>